Cinnamon: Fix grouped window list visibility issue

--- a/cinnamon/cinnamon-dark.css
+++ b/cinnamon/cinnamon-dark.css
@@ -1118,7 +1118,7 @@ StScrollBar {
       padding-left: 1px; }
   .grouped-window-list-item-box:active, .grouped-window-list-item-box:checked {
     color: #fff;
-    border-color: #435363; }
+    border-color: #637990; }
   .grouped-window-list-item-box:hover, .grouped-window-list-item-box:active:hover, .grouped-window-list-item-box:focus, .grouped-window-list-item-box:active:focus, .grouped-window-list-item-box:focus:hover, .grouped-window-list-item-box:active:focus:hover {
     color: #fff;
     border-color: #8CA1A5; }
